[package]
name = "yt_tutorial_projects"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[dependencies.arduino-hal]
git="https://github.com/Rahix/avr-hal" 
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git="https://github.com/Rahix/avr-hal" 
