[package]
name = "yt_tutorial_projects"
version = "0.1.0"
edition = "2024"
default-run="shift_register"

[dependencies]
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
ufmt = "0.2.0"
libm = "0.2.11"
micromath = "2.1.0"
nb = "1.1.0"
uln2003 = "0.4.0"

[dependencies.arduino-hal]
git="https://github.com/Rahix/avr-hal" 
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git="https://github.com/Rahix/avr-hal" 

